fix alignment, removed redunant css classes, align layout with the rest (#7954)

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -2157,40 +2157,8 @@ label {
   margin-right: 15px;
 }
 
-.severity-ok {
-  color: green;
-}
-
-.severity-info {
-  color: royalblue;
-}
-
-.severity-notice {
-  color: gold;
-}
-
-.severity-warning {
-  color: darkorange;
-}
-
-.severity-critical {
-  color: red;
-}
-
-.severity-unknown {
-  color: darkgrey;
-}
-
 .alert-status {
   display: inline-block;
   width: 7px;
   min-height: 27px;
-}
-
-.service-status {
-    width:10px;
-    height:50px;
-    display: block;
-    margin: 0;
-    border-radius: 0;
 }
